--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -7,14 +7,14 @@
     <title>Title</title>
 </head>
 <body>
-class="container"
+
 <div class="form-group">
     <label for="register-username">Username</label>
     <input type="text" class="form-control" id="register-username" placeholder="username">
 
 </div>
 <div class="form-group">
-    <label for="register-password">Username</label>
+    <label for="register-password">Password</label>
     <input type="text" class="form-control" id="register-password" placeholder="password">
 
 </div>
